force-app/main/default/objects/Custom_Path_Transition__c/Custom_Path_Transition__c.object-meta.xml
<CustomObject>
    <label>Custom Path Transition</label>
    <pluralLabel>Custom Path Transitions</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CPT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>