force-app/main/default/objects/Custom_Path_Transition__c/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>