force-app/main/default/objects/Custom_Path_Transition__c/fields/Is_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Allowed__c</fullName>
    <label>Is Allowed</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>