force-app/main/default/objects/Custom_Path_Transition__c/fields/Path_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Path_Mapping__c</fullName>
    <label>Path Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>Custom_Path_Mapping__c</referenceTo>
    <relationshipLabel>Custom Path Transitions</relationshipLabel>
    <relationshipName>Custom_Path_Transitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>