force-app/main/default/objects/Custom_Path_Transition__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <label>To Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>